2009-04-04  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_track):
	Check for empty free track URLs

2009-04-04  Alberto Garcia  <agarcia@igalia.com>

	* src/util.c (xml_find_node):
	Allow empty lists (node == NULL)

2009-04-03  Alberto Garcia  <agarcia@igalia.com>

	* src/*.[ch]:
	Change all function declarations to use the same formatting rules.

2009-04-03  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (parse_xml_tags)
	* src/protocol.c (lastfm_parse_track, lastfm_parse_playlist)
	* src/userconfig.c (vgl_user_cfg_read)
	* src/util.c (xml_find_node)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_load_from_disk):
	Replace xmlStrcmp() by xmlStrEqual() for speed and readability

2009-03-27  Alberto Garcia  <agarcia@igalia.com>

	* TRANSLATORS
	* po/fr.po
	* src/uimisc.c:
	Updated French translation, by Jean-Alexandre Angles d'Auriac

2009-03-21  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (parse_xml_tags): Fix infinite loop.

2009-03-18  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_playlist)
	* src/metadata.c (parse_xml_tags, -get_xml_tag_name):
	Refactor code using xml functions in util.c

2009-03-18  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (get_xml_tag_name)
	* src/protocol.c (lastfm_parse_track)
	* src/userconfig.c (vgl_user_cfg_read)
	* src/util.c (xml_get_string, xml_get_bool, xml_get_glong)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_load_from_disk):
	Don't make xml_get_string() free the value parameter, return NULL
	instead

2009-03-17  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_track):
	Refactor code using xml functions in util.c

2009-03-16  Alberto Garcia  <agarcia@igalia.com>

	* src/util.h
	* src/util.c (xml_add_glong, xml_get_glong, xml_get_string)
	(xml_find_node):
	Added xml_find_node(), xml_add_glong() and xml_get_glong()

2009-03-14  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (get_xml_tag_name)